--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -14,6 +14,6 @@ steps:
   displayName: 'Run a one-line script'
 
 - script: |
-    maven --version
+    mvn --version
     docker --version
   displayName: 'Run a multi-line script'
