--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -17,5 +17,6 @@ steps:
     mvn package
     docker build -t myapp:01 .
     docker tag myapp:01 tamajitacr.azurecr.io/myapp:01
+    echo FgEuRWrDvTRYxJ8afaWjTlghkcEH3uz+| docker login tamajitacr.azurecr.io  --username tamajitacr --password-stdin
     docker push tamajitacr.azurecr.io/myapp:01
   displayName: 'Run a multi-line script'
