--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -29,5 +29,4 @@ steps:
     repository: 'testapp'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
-    tags:
-     - latest
+    tags: 'latest'
