--- a/Deploy/deploy.yaml
+++ b/Deploy/deploy.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - image: tamajitacr.azurecr.io/testapp:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: testapp
         ports:
         - containerPort: 8080
